@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.46 2004/12/20 14:57:05 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.47 2004/12/20 15:24:27 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -157,7 +157,8 @@ Exim version 4.50
         just the host names, not the priorities.
 
     (3) It is now possible to give a list of domains (or IP addresses) to be
-        looked up.
+        looked up. The behaviour when one of the lookups defers can be
+        controlled by a keyword.
 
     (4) It is now possible to specify the separator character for use when
         multiple records are returned.
